--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,11 +24,11 @@ jobs:
 
       # 3. Установка зависимостей
       - name: Install dependencies
-      - run npm ci
+        run: npm ci
 
       # 4. Сборка проекта
       - name: Build project
-      - run: npm run build
+        run: npm run build
 
       # 5. Деплой на GitHub Pages
       - name: Deploy to GitHub Pages
