--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,6 @@
-{ 
-    "extends": [
-        "stylelint-config-standard",
-        "stylelint-prettier/recommended"
-    ] 
+{
+  "extends": ["stylelint-config-standard", "stylelint-prettier/recommended"],
+  "rules": {
+    "prettier/prettier": true
+  }
 }
